--- a/app/avatar/dev/page.mdx
+++ b/app/avatar/dev/page.mdx
@@ -88,8 +88,6 @@ import CodePreview from '@components/showcase/CodePreview';
 | **--par-color-text-avatar-trigger**       | AvatarTrigger text   | Avatar trigger text       |
 | **--avatar-group-spacing**                | Group spacing        | Spacing between avatars   |
 
-> _Note: Status border tokens are set via `data-status-color` and mapped to the appropriate color variable. Supported colors: gray, red, green, yellow._
-
 ---
 
 ## Avatar API Reference
@@ -125,7 +123,7 @@ import CodePreview from '@components/showcase/CodePreview';
 | ------------------ | --------------------------------------- | ----------- | --------------------------------------- |
 | **onClick**        | (e: MouseEvent[HTMLDivElement]) => void |             | Click handler for the trigger.          |
 | **active**         | boolean                                 | _false_     | Whether the trigger is active/selected. |
-| **...AvatarProps** | [See above](#avatar)                    |             | All props from **Avatar**.              |
+| **...AvatarProps** | [See above](#avatar-api-reference)      |             | All props from **Avatar**.              |
 
 > **Note:** _AvatarTrigger_ **extends** all props from **Avatar**. See the Avatar props table above for details.
 
