--- a/app/badge/dev/page.mdx
+++ b/app/badge/dev/page.mdx
@@ -39,7 +39,7 @@ import CodePreview from '@components/showcase/CodePreview';
 | **--par-color-bg-badge-glass-\<color\>**        | Badge background (glass)    | Glass badge, all colors    |
 | **--par-color-border-badge-glass-\<color\>**    | Badge border (glass)        | Glass badge, all colors    |
 
-> _Note: Replace `\<color\>` with supported color names: gray, red, green, yellow, blue, orange, cyan, violet, lime._
+> _Note: Replace `color` with supported color names: gray, red, green, yellow, blue, orange, cyan, violet, lime._
 
 ## Badge API Reference
 
