--- a/app/base/dev/page.mdx
+++ b/app/base/dev/page.mdx
@@ -1,4 +1,4 @@
-## Base Design Tokens
+## Base CSS Properties
 
 | **Prop Name**       | **CSS Property**          | **Description**       |
 | ------------------- | ------------------------- | --------------------- |
