--- a/app/email-input/dev/page.mdx
+++ b/app/email-input/dev/page.mdx
@@ -5,22 +5,6 @@ import CodePreview from '@components/showcase/CodePreview';
   <Demo.BasicEmailInput />
 </CodePreview>
 
-## Domain
-
-<CodePreview paths={['email-input', 'DomainEmailInputAlternativeClearable']}>
-  <Demo.DomainEmailInputAlternativeClearable />
-</CodePreview>
-<CodePreview paths={['email-input', 'DomainEmailInputAlternativeDomainGmail']}>
-  <Demo.DomainEmailInputAlternativeDomainGmail />
-</CodePreview>
-
-<CodePreview paths={['email-input', 'DomainEmailInputAlternativeDisabledClearable']}>
-  <Demo.DomainEmailInputAlternativeDisabledClearable />
-</CodePreview>
-<CodePreview paths={['email-input', 'DomainEmailInputAlternativeDisabledDomainGmail']}>
-  <Demo.DomainEmailInputAlternativeDisabledDomainGmail />
-</CodePreview>
-
 ## State
 
 <CodePreview paths={['email-input', 'BasicEmailInputDisabled']}>
@@ -48,49 +32,68 @@ import CodePreview from '@components/showcase/CodePreview';
   <Demo.DomainEmailInputDisabledClearableOnly />
 </CodePreview>
 
+## Domain
+
+<CodePreview paths={['email-input', 'DomainEmailInputClearable']}>
+  <Demo.DomainEmailInputClearable />
+</CodePreview>
+<CodePreview paths={['email-input', 'DomainEmailInputDomainGmail']}>
+  <Demo.DomainEmailInputDomainGmail />
+</CodePreview>
+
+<CodePreview paths={['email-input', 'DomainEmailInputDisabledClearable']}>
+  <Demo.DomainEmailInputDisabledClearable />
+</CodePreview>
+<CodePreview paths={['email-input', 'DomainEmailInputDisabledDomainGmail']}>
+  <Demo.DomainEmailInputDisabledDomainGmail />
+</CodePreview>
+
 ## Floating label
 
-<CodePreview paths={['email-input', 'BasicEmailInputAlternativeFloatingLabel']}>
-  <Demo.BasicEmailInputAlternativeFloatingLabel />
+<CodePreview paths={['email-input', 'BasicEmailInputFloatingLabel']}>
+  <Demo.BasicEmailInputFloatingLabel />
 </CodePreview>
-<CodePreview paths={['email-input', 'DomainEmailInputAlternativeFloatingLabel']}>
-  <Demo.DomainEmailInputAlternativeFloatingLabel />
+<CodePreview paths={['email-input', 'DomainEmailInputFloatingLabel']}>
+  <Demo.DomainEmailInputFloatingLabel />
 </CodePreview>
-<CodePreview paths={['email-input', 'BasicEmailInputAlternativeFloatingLabelClearable']}>
-  <Demo.BasicEmailInputAlternativeFloatingLabelClearable />
+<CodePreview paths={['email-input', 'BasicEmailInputFloatingLabelClearable']}>
+  <Demo.BasicEmailInputFloatingLabelClearable />
 </CodePreview>
-<CodePreview paths={['email-input', 'DomainEmailInputAlternativeFloatingLabelDomainGmail']}>
-  <Demo.DomainEmailInputAlternativeFloatingLabelDomainGmail />
+<CodePreview paths={['email-input', 'DomainEmailInputFloatingLabelDomainGmail']}>
+  <Demo.DomainEmailInputFloatingLabelDomainGmail />
 </CodePreview>
-<CodePreview paths={['email-input', 'BasicEmailInputAlternativeFloatingLabelError']}>
-  <Demo.BasicEmailInputAlternativeFloatingLabelError />
+<CodePreview paths={['email-input', 'BasicEmailInputFloatingLabelError']}>
+  <Demo.BasicEmailInputFloatingLabelError />
 </CodePreview>
-<CodePreview paths={['email-input', 'DomainEmailInputAlternativeFloatingLabelError']}>
-  <Demo.DomainEmailInputAlternativeFloatingLabelError />
+<CodePreview paths={['email-input', 'DomainEmailInputFloatingLabelError']}>
+  <Demo.DomainEmailInputFloatingLabelError />
 </CodePreview>
-<CodePreview paths={['email-input', 'BasicEmailInputAlternativeFloatingLabelReadOnly']}>
-  <Demo.BasicEmailInputAlternativeFloatingLabelReadOnly />
+<CodePreview paths={['email-input', 'BasicEmailInputFloatingLabelReadOnly']}>
+  <Demo.BasicEmailInputFloatingLabelReadOnly />
 </CodePreview>
-<CodePreview paths={['email-input', 'DomainEmailInputAlternativeFloatingLabelReadOnly']}>
-  <Demo.DomainEmailInputAlternativeFloatingLabelReadOnly />
+<CodePreview paths={['email-input', 'DomainEmailInputFloatingLabelReadOnly']}>
+  <Demo.DomainEmailInputFloatingLabelReadOnly />
 </CodePreview>
-<CodePreview paths={['email-input', 'BasicEmailInputAlternativeFloatingLabelDisabled']}>
-  <Demo.BasicEmailInputAlternativeFloatingLabelDisabled />
+<CodePreview paths={['email-input', 'BasicEmailInputFloatingLabelDisabled']}>
+  <Demo.BasicEmailInputFloatingLabelDisabled />
 </CodePreview>
-<CodePreview paths={['email-input', 'DomainEmailInputAlternativeFloatingLabelDisabled']}>
-  <Demo.DomainEmailInputAlternativeFloatingLabelDisabled />
+<CodePreview paths={['email-input', 'DomainEmailInputFloatingLabelDisabled']}>
+  <Demo.DomainEmailInputFloatingLabelDisabled />
+</CodePreview>
+
+## Alternative
+
+<CodePreview paths={['email-input', 'DomainEmailInputAlternativeMedium']} theme='alternative'>
+  <Demo.DomainEmailInputAlternativeMedium />
+</CodePreview>
+<CodePreview paths={['email-input', 'BasicEmailInputAlternative']} theme='alternative'>
+  <Demo.BasicEmailInputAlternative />
 </CodePreview>
 
 ## Size Medium
 
-<CodePreview paths={['email-input', 'BasicEmailInputAlternativeMedium']}>
-  <Demo.BasicEmailInputAlternativeMedium />
-</CodePreview>
-<CodePreview paths={['email-input', 'DomainEmailInputAlternativeMedium']}>
+<CodePreview paths={['email-input', 'DomainEmailInputAlternativeMedium']} theme='alternative'>
   <Demo.DomainEmailInputAlternativeMedium />
-</CodePreview>
-<CodePreview paths={['email-input', 'DomainEmailInputAlternativeMediumDomainGmail']}>
-  <Demo.DomainEmailInputAlternativeMediumDomainGmail />
 </CodePreview>
 
 ## Design Tokens for EmailInput
