--- a/app/pinfield/dev/page.mdx
+++ b/app/pinfield/dev/page.mdx
@@ -100,6 +100,6 @@ import CodePreview from '@components/showcase/CodePreview';
 | **placeholder**     | string                     | _'•'_       | Placeholder for empty fields                     |
 | **...HTMLDivProps** | HTMLDivElement props       |             | Inherits all props of div                        |
 
-> **_Note:_** _PinField_ does not inherit InputProps directly but HTMLDivElement props.\_
+> **_Note:_** _PinField_ does not inherit InputProps directly but HTMLDivElement props.
 
 ---
