--- a/app/text-input/dev/page.mdx
+++ b/app/text-input/dev/page.mdx
@@ -106,58 +106,58 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Clearable
 
-<CodePreview paths={['text-input', 'ClearableAlternativeInput']}>
+<CodePreview paths={['text-input', 'ClearableAlternativeInput']} theme='alternative'>
   <Demo.ClearableAlternativeInput />
 </CodePreview>
-<CodePreview paths={['text-input', 'ClearableAlternativeInputWithLeftIcon']}>
+<CodePreview paths={['text-input', 'ClearableAlternativeInputWithLeftIcon']} theme='alternative'>
   <Demo.ClearableAlternativeInputWithLeftIcon />
 </CodePreview>
 
 ## States
 
-<CodePreview paths={['text-input', 'ErrorInputClearableAlternative']}>
+<CodePreview paths={['text-input', 'ErrorInputClearableAlternative']} theme='alternative'>
   <Demo.ErrorInputClearableAlternative />
 </CodePreview>
-<CodePreview paths={['text-input', 'ErrorInputClearableWithLeftIconAlternative']}>
+<CodePreview paths={['text-input', 'ErrorInputClearableWithLeftIconAlternative']} theme='alternative'>
   <Demo.ErrorInputClearableWithLeftIconAlternative />
 </CodePreview>
-<CodePreview paths={['text-input', 'DisabledClearableInputAlternative']}>
+<CodePreview paths={['text-input', 'DisabledClearableInputAlternative']} theme='alternative'>
   <Demo.DisabledClearableInputAlternative />
 </CodePreview>
-<CodePreview paths={['text-input', 'DisabledClearableInputWithLeftIconAlternative']}>
+<CodePreview paths={['text-input', 'DisabledClearableInputWithLeftIconAlternative']} theme='alternative'>
   <Demo.DisabledClearableInputWithLeftIconAlternative />
 </CodePreview>
-<CodePreview paths={['text-input', 'ReadOnlyClearableInputAlternative']}>
+<CodePreview paths={['text-input', 'ReadOnlyClearableInputAlternative']} theme='alternative'>
   <Demo.ReadOnlyClearableInputAlternative />
 </CodePreview>
-<CodePreview paths={['text-input', 'ReadOnlyClearableInputWithLeftIconAlternative']}>
+<CodePreview paths={['text-input', 'ReadOnlyClearableInputWithLeftIconAlternative']} theme='alternative'>
   <Demo.ReadOnlyClearableInputWithLeftIconAlternative />
 </CodePreview>
 
 ## Floating label
 
-<CodePreview paths={['text-input', 'ClearableFloatingLabelInputAlternative']}>
+<CodePreview paths={['text-input', 'ClearableFloatingLabelInputAlternative']} theme='alternative'>
   <Demo.ClearableFloatingLabelInputAlternative />
 </CodePreview>
-<CodePreview paths={['text-input', 'ClearableFloatingLabelInputWithLeftIconAlternative']}>
+<CodePreview paths={['text-input', 'ClearableFloatingLabelInputWithLeftIconAlternative']} theme='alternative'>
   <Demo.ClearableFloatingLabelInputWithLeftIconAlternative />
 </CodePreview>
-<CodePreview paths={['text-input', 'ErrorClearableFloatingLabelInputAlternative']}>
+<CodePreview paths={['text-input', 'ErrorClearableFloatingLabelInputAlternative']} theme='alternative'>
   <Demo.ErrorClearableFloatingLabelInputAlternative />
 </CodePreview>
-<CodePreview paths={['text-input', 'ErrorClearableFloatingLabelInputWithLeftIconAlternative']}>
+<CodePreview paths={['text-input', 'ErrorClearableFloatingLabelInputWithLeftIconAlternative']} theme='alternative'>
   <Demo.ErrorClearableFloatingLabelInputWithLeftIconAlternative />
 </CodePreview>
-<CodePreview paths={['text-input', 'DisabledClearableFloatingLabelInputAlternative']}>
+<CodePreview paths={['text-input', 'DisabledClearableFloatingLabelInputAlternative']} theme='alternative'>
   <Demo.DisabledClearableFloatingLabelInputAlternative />
 </CodePreview>
-<CodePreview paths={['text-input', 'DisabledClearableFloatingLabelInputWithLeftIconAlternative']}>
+<CodePreview paths={['text-input', 'DisabledClearableFloatingLabelInputWithLeftIconAlternative']} theme='alternative'>
   <Demo.DisabledClearableFloatingLabelInputWithLeftIconAlternative />
 </CodePreview>
-<CodePreview paths={['text-input', 'ReadOnlyClearableFloatingLabelInputAlternative']}>
+<CodePreview paths={['text-input', 'ReadOnlyClearableFloatingLabelInputAlternative']} theme='alternative'>
   <Demo.ReadOnlyClearableFloatingLabelInputAlternative />
 </CodePreview>
-<CodePreview paths={['text-input', 'ReadOnlyClearableFloatingLabelInputWithLeftIconAlternative']}>
+<CodePreview paths={['text-input', 'ReadOnlyClearableFloatingLabelInputWithLeftIconAlternative']} theme='alternative'>
   <Demo.ReadOnlyClearableFloatingLabelInputWithLeftIconAlternative />
 </CodePreview>
 
@@ -165,7 +165,7 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for TextInput
 
-> _Note: TextInput uses the same design tokens as the Input component. See [Input](../base-input/dev) documentation for available tokens. Tokens are referenced from `BaseInput/variables.css`._
+> _Note: TextInput uses the same design tokens as the Input component. See [Input](../base-input/dev) documentation for available tokens._
 
 ---
 
