--- a/app/tree-navigation/dev/page.mdx
+++ b/app/tree-navigation/dev/page.mdx
@@ -3,8 +3,8 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Neutral
 
-<CodePreview paths={['tree-navigation', 'TreeNavigationDemo']}>
-  <Demo.TreeNavigationDemo />
+<CodePreview paths={['tree-navigation', 'TreeNavigation']}>
+  <Demo.TreeNavigation />
 </CodePreview>
 
 ## Accent
