refactor: update prose styles with new color variables for callouts and links

--- a/app/color/dev/page.mdx
+++ b/app/color/dev/page.mdx
@@ -37,37 +37,37 @@ Tokens follow the structure:
 
 ## Background Tokens
 
-| Token Name                                                        | Light Value                                    | Dark Value                                     | Description                         |
-| ----------------------------------------------------------------- | ---------------------------------------------- | ---------------------------------------------- | ----------------------------------- |
-| `--par-color-bg`                                                  | `var(--par-neutral-0)`                         | `var(--par-neutral-950)`                       | Main background                     |
-| `--par-color-bg-alternative`                                      | `var(--par-neutral-50)`                        | `var(--par-neutral-900)`                       | Alternative background              |
-| `--par-color-bg-surface`                                          | `var(--par-neutral-50)`                        | `var(--par-neutral-900)`                       | Surface background                  |
-| `--par-color-bg-surface-inverse`                                  | `var(--par-neutral-950)`                       | `var(--par-neutral-0)`                         | Inverse surface background          |
-| `--par-color-bg-surface-alternative`                              | `var(--par-neutral-0)`                         | `var(--par-neutral-800)`                       | Alternative surface background      |
-| `--par-color-bg-surface-indicator-neutral`                        | `var(--par-neutral-500)`                       | `var(--par-neutral-500)`                       | Neutral indicator background        |
-| `--par-color-bg-surface-indicator-accent`                         | `var(--par-accent-500)`                        | `var(--par-accent-500)`                        | Accent indicator background         |
-| `--par-color-bg-surface-item-enabled`                             | `transparent`                                  | `transparent`                                  | Enabled item background             |
-| `--par-color-bg-surface-item-hovered`                             | `rgb(from var(--par-neutral-200) r g b / 0.5)` | `rgb(from var(--par-neutral-700) r g b / 0.5)` | Hovered item background             |
-| `--par-color-bg-surface-item-neutral-subtle-selected`             | `var(--par-neutral-200)`                       | `rgb(from var(--par-neutral-200) r g b / 0.5)` | Subtle selected neutral item        |
-| `--par-color-bg-surface-item-neutral-subtle-selected-hovered`     | `var(--par-neutral-300)`                       | `rgb(from var(--par-neutral-300) r g b / 0.5)` | Subtle selected neutral hovered     |
-| `--par-color-bg-surface-item-neutral-pronounced-selected`         | `var(--par-neutral-900)`                       | `var(--par-neutral-100)`                       | Pronounced selected neutral item    |
-| `--par-color-bg-surface-item-neutral-pronounced-selected-hovered` | `var(--par-neutral-800)`                       | `var(--par-neutral-200)`                       | Pronounced selected neutral hovered |
-| `--par-color-bg-surface-item-accent-subtle-selected`              | `var(--par-accent-100)`                        | `rgb(from var(--par-neutral-200) r g b / 0.5)` | Subtle selected accent item         |
-| `--par-color-bg-surface-item-accent-subtle-selected-hovered`      | `var(--par-accent-200)`                        | `rgb(from var(--par-neutral-300) r g b / 0.5)` | Subtle selected accent hovered      |
-| `--par-color-bg-surface-item-accent-pronounced-selected`          | `var(--par-accent-600)`                        | `var(--par-accent-600)`                        | Pronounced selected accent item     |
-| `--par-color-bg-surface-item-accent-pronounced-selected-hovered`  | `var(--par-accent-700)`                        | `var(--par-accent-700)`                        | Pronounced selected accent hovered  |
-| `--par-color-bg-field-enabled`                                    | `var(--par-neutral-50)`                        | `var(--par-neutral-900)`                       | Enabled field background            |
-| `--par-color-bg-field-alternative-enabled`                        | `var(--par-neutral-0)`                         | `var(--par-neutral-800)`                       | Alternative enabled field bg        |
-| `--par-color-bg-field-hovered`                                    | `var(--par-neutral-100)`                       | `var(--par-neutral-800)`                       | Hovered field background            |
-| `--par-color-bg-field-alternative-hovered`                        | `var(--par-neutral-100)`                       | `var(--par-neutral-700)`                       | Alternative hovered field bg        |
-| `--par-color-bg-field-disabled`                                   | `rgb(from var(--par-neutral-50) r g b / 0.5)`  | `rgb(from var(--par-neutral-900) r g b / 0.5)` | Disabled field background           |
-| `--par-color-bg-field-alternative-disabled`                       | `rgb(from var(--par-neutral-0) r g b / 0.5)`   | `rgb(from var(--par-neutral-800) r g b / 0.5)` | Alt disabled field background       |
-| `--par-color-bg-field-readonly`                                   | `var(--par-neutral-100)`                       | `var(--par-neutral-800)`                       | Readonly field background           |
-| `--par-color-bg-field-invalid`                                    | `var(--par-adverse-50)`                        | `var(--par-adverse-900)`                       | Invalid field background            |
-| `--par-color-bg-field-button-enabled`                             | `transparent`                                  | `transparent`                                  | Enabled field button background     |
-| `--par-color-bg-field-button-hovered`                             | `rgb(from var(--par-neutral-200) r g b / 0.5)` | `rgb(from var(--par-neutral-700) r g b / 0.5)` | Hovered field button background     |
-| `--par-color-bg-field-button-pressed`                             | `rgb(from var(--par-neutral-300) r g b / 0.5)` | `rgb(from var(--par-neutral-600) r g b / 0.5)` | Pressed field button background     |
-| `--par-color-bg-field-button-disabled`                            | `transparent`                                  | `transparent`                                  | Disabled field button background    |
+| Token Name                                                          | Light Value                                    | Dark Value                                     | Description                         |
+| ------------------------------------------------------------------- | ---------------------------------------------- | ---------------------------------------------- | ----------------------------------- |
+| **--par-color-bg**                                                  | `var(--par-neutral-0)`                         | `var(--par-neutral-950)`                       | Main background                     |
+| **--par-color-bg-alternative**                                      | `var(--par-neutral-50)`                        | `var(--par-neutral-900)`                       | Alternative background              |
+| **--par-color-bg-surface**                                          | `var(--par-neutral-50)`                        | `var(--par-neutral-900)`                       | Surface background                  |
+| **--par-color-bg-surface-inverse**                                  | `var(--par-neutral-950)`                       | `var(--par-neutral-0)`                         | Inverse surface background          |
+| **--par-color-bg-surface-alternative**                              | `var(--par-neutral-0)`                         | `var(--par-neutral-800)`                       | Alternative surface background      |
+| **--par-color-bg-surface-indicator-neutral**                        | `var(--par-neutral-500)`                       | `var(--par-neutral-500)`                       | Neutral indicator background        |
+| **--par-color-bg-surface-indicator-accent**                         | `var(--par-accent-500)`                        | `var(--par-accent-500)`                        | Accent indicator background         |
+| **--par-color-bg-surface-item-enabled**                             | `transparent`                                  | `transparent`                                  | Enabled item background             |
+| **--par-color-bg-surface-item-hovered**                             | `rgb(from var(--par-neutral-200) r g b / 0.5)` | `rgb(from var(--par-neutral-700) r g b / 0.5)` | Hovered item background             |
+| **--par-color-bg-surface-item-neutral-subtle-selected**             | `var(--par-neutral-200)`                       | `rgb(from var(--par-neutral-200) r g b / 0.5)` | Subtle selected neutral item        |
+| **--par-color-bg-surface-item-neutral-subtle-selected-hovered**     | `var(--par-neutral-300)`                       | `rgb(from var(--par-neutral-300) r g b / 0.5)` | Subtle selected neutral hovered     |
+| **--par-color-bg-surface-item-neutral-pronounced-selected**         | `var(--par-neutral-900)`                       | `var(--par-neutral-100)`                       | Pronounced selected neutral item    |
+| **--par-color-bg-surface-item-neutral-pronounced-selected-hovered** | `var(--par-neutral-800)`                       | `var(--par-neutral-200)`                       | Pronounced selected neutral hovered |
+| **--par-color-bg-surface-item-accent-subtle-selected**              | `var(--par-accent-100)`                        | `rgb(from var(--par-neutral-200) r g b / 0.5)` | Subtle selected accent item         |
+| **--par-color-bg-surface-item-accent-subtle-selected-hovered**      | `var(--par-accent-200)`                        | `rgb(from var(--par-neutral-300) r g b / 0.5)` | Subtle selected accent hovered      |
+| **--par-color-bg-surface-item-accent-pronounced-selected**          | `var(--par-accent-600)`                        | `var(--par-accent-600)`                        | Pronounced selected accent item     |
+| **--par-color-bg-surface-item-accent-pronounced-selected-hovered**  | `var(--par-accent-700)`                        | `var(--par-accent-700)`                        | Pronounced selected accent hovered  |
+| **--par-color-bg-field-enabled**                                    | `var(--par-neutral-50)`                        | `var(--par-neutral-900)`                       | Enabled field background            |
+| **--par-color-bg-field-alternative-enabled**                        | `var(--par-neutral-0)`                         | `var(--par-neutral-800)`                       | Alternative enabled field bg        |
+| **--par-color-bg-field-hovered**                                    | `var(--par-neutral-100)`                       | `var(--par-neutral-800)`                       | Hovered field background            |
+| **--par-color-bg-field-alternative-hovered**                        | `var(--par-neutral-100)`                       | `var(--par-neutral-700)`                       | Alternative hovered field bg        |
+| **--par-color-bg-field-disabled**                                   | `rgb(from var(--par-neutral-50) r g b / 0.5)`  | `rgb(from var(--par-neutral-900) r g b / 0.5)` | Disabled field background           |
+| **--par-color-bg-field-alternative-disabled**                       | `rgb(from var(--par-neutral-0) r g b / 0.5)`   | `rgb(from var(--par-neutral-800) r g b / 0.5)` | Alt disabled field background       |
+| **--par-color-bg-field-readonly**                                   | `var(--par-neutral-100)`                       | `var(--par-neutral-800)`                       | Readonly field background           |
+| **--par-color-bg-field-invalid**                                    | `var(--par-adverse-50)`                        | `var(--par-adverse-900)`                       | Invalid field background            |
+| **--par-color-bg-field-button-enabled**                             | `transparent`                                  | `transparent`                                  | Enabled field button background     |
+| **--par-color-bg-field-button-hovered**                             | `rgb(from var(--par-neutral-200) r g b / 0.5)` | `rgb(from var(--par-neutral-700) r g b / 0.5)` | Hovered field button background     |
+| **--par-color-bg-field-button-pressed**                             | `rgb(from var(--par-neutral-300) r g b / 0.5)` | `rgb(from var(--par-neutral-600) r g b / 0.5)` | Pressed field button background     |
+| **--par-color-bg-field-button-disabled**                            | `transparent`                                  | `transparent`                                  | Disabled field button background    |
 
 ---
 
