========================================================== fix: update import statement for ThemeProvider and add submit type to Button component

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -12,7 +12,7 @@ import CodeBlock from '@components/showcase/CodeBlock';
 
 <CodeBlock language='tsx'>
   {`
-import ThemeProvider from 'beta-parity-react/ui/theme';
+import { ThemeProvider } from 'beta-parity-react/ui/theme';
 export default function App() {
   return <ThemeProvider>... Your application code</ThemeProvider>;
 }
